--- a/端午/index.html
+++ b/端午/index.html
@@ -5,65 +5,90 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="CSS/1.css">
 </head>
-<body>
-<div class="Logo" width=""><img src="images/banner.jpg"></div>
-<div class="menu">
-	<ul>
-		<li><a href="#">首页</a></li>
-		<li><a href="#">起源考证</a></li>
-		<li><a href="#">民间习俗</a></li>
-		<li><a href="#">文字记述</a></li>
-		<li><a href="#">传承发展</a></li>
-	</ul>
+<body background="">
+<div class="aa">
+	<div class="Logo">
+		<img src="images/dw.jpg" width="70px" height="60px" >
+	</div>
+	<div class="menu">
+		<ul>
+			<li><a href="#">首页</a></li>
+			<li><a href="#">人物纪念</a></li>
+			<li><a href="#">起源考证</a></li>
+			<li><a href="#">民间习俗</a></li>
+			<li><a href="#">相关传说</a></li>
+			<li><a href="#">传承发展</a></li>
+			<li><a href="#">诗词作品</a></li>
+			<li><a href="#">文学记述</a></li>
+			<li><a href="#">特色饮食</a></li>
+		</ul>
+	</div>
 </div>
 <div class="bannner">
-	<img src="images/05.jpg">
-</div>
-<div class="main">
-	<div class="m_left"></div>
-	<div class="m_right"></div>
+	<img src="images/banner.jpg" width=100% height="400px">
 </div>
 <div class="list">
 	<div class="list_img">
-		<img src="" width="230" height="260">
-		<h3>图片被描述信息</h3>
+		<img src="images/qy.jpg" width="230" height="260">
+		<h3>人物纪念</h3>
+		<p>相传，屈原倡导举贤授能，富国强兵，力主联齐抗秦，遭到贵族子兰等人的强烈反对，屈原遭馋去职，被赶出都城，流放到沅、湘流域。他在流放中，写下了忧国忧民的《离骚》、《天问》、《九歌》等诗篇，独具风貌，影响深远（因而，端午节也称诗人节）。公元前278年，秦军攻破楚国京都，屈原眼看自己的祖国被侵略，心如刀割，但是始终不忍舍弃自己的祖国，于五月五日，在写下了绝笔作《怀沙》之后，抱石投汨罗江自尽，以自己的生命谱写了一曲壮丽的爱国主义乐章。[6]  屈原投江后，当地百姓闻讯马上划船捞救，一直行至洞庭湖，始终不见屈原的尸体。那时，恰逢雨天，湖面上的小舟一起汇集在岸边的亭子旁。当人们得知是为了打捞贤臣屈大夫时，再次冒雨出动，争相划进茫茫的洞庭湖。为了寄托哀思，人们荡舟江河之上，此后才逐渐发展成为龙舟竞赛。百姓们又怕江河里的鱼吃掉他的身体，就纷纷回家拿来米团投入江中，以免鱼虾糟蹋屈原的尸体，后来就成了吃粽子的习俗。</p>
 	</div>
 	<div class="list_img">
-		<img src="" width="230" height="260">
-		<h3>图片被描述信息</h3>
+		<img src="images/ftj.jpg" width="230" height="260">
+		<h3>起源考证</h3>
+		<p>“端午”一词最早出现于西晋名臣周处的《风土记》。这本文献成了现代人们查考端午节等传统节日习俗的重要参考。端午节起源于何时──长期以来众说纷纭，说法不一，争论不休。关于端午节起源的主要观点有四种：流传甚广的“历史人物纪念”观点，依据南朝梁人吴均的《续齐谐记》及宗檩《荆楚岁时记》，认为端午节起源于纪念屈原。还有认为是纪念伍子胥、纪念曹娥等。闻一多先生认为端午节是古百越族举行龙图腾崇拜活动的节日，他在《端午考》及《端午节的历史教育》（见《闻一多全集》）两篇论文中详细论证了他的观点.认为端午节起源于恶日（见张心勤《端午节非因屈原考》）。说端午节源于夏至（详见刘德谦《“端午”始源又一说》）。</p>
 	</div>
 	<div class="list_img">
-		<img src="" width="230" height="260">
-		<h3>图片被描述信息</h3>
+		<img src="images/fengsu.jpg" width="230" height="260">
+		<h3>民间习俗</h3>
+		<p>据考证，端午龙舟竞渡的习俗，早在屈原之前已经存在。吴越之地于春秋之前就有在农历五月初五以龙舟竞渡形式举行部落图腾祭祀的习俗。即使在屈原本人的诗作中，也可以反映出当时竞渡的风俗来，如《楚辞˙涉江》中就有：“乘舲船余上沅兮，齐吴榜以击汰。船容与而不进兮，淹回水而凝滞。朝发枉渚兮，夕宿辰阳。”屈原所乘的这种狭长而轻小的舲船实质上也就是当时一种竞度所用的船。</p>
+	</div>
+	<div class="list_img">
+		<img src="images/cs.jpg" width="230" height="260">
+		<h3>相关传说</h3>
+		<p>汉代人认为，五月五日为恶月、恶日，且有“不举五月子”之俗，即五月五日所生的婴儿无论是男或是女都不能抚养成人。一旦抚养则男害父、女害母。甚至出现了“五月到官，至免不迁”，“五月盖屋，令人头秃”等说法。这一习俗至迟从战国开始流行，迄至汉代盛行不衰。此俗在汉人王充的《论衡》、应劭《风俗通》以及《后汉书》中，多有记载。</p>
 	</div>
 
-<div class="list_img">
-		<img src="" width="230" height="260">
-		<h3>图片被描述信息</h3>
+	<div class="list_img">
+		<img src="images/cc.jpg" width="230" height="260">
+		<h3>传承发展</h3>
+		<p>联合国教科文组织保护非物质文化遗产政府间委员会第四次会议2009年9月30日在阿联酋阿布扎比审议并批准了端午节列入世界非物质文化遗产名录，端午节成为中国首个入选世界非遗的节日。</p>
 	</div>
 
-<div class="list_img">
-		<img src="" width="230" height="260">
-		<h3>图片被描述信息</h3>
+	<div class="list_img">
+		<img src="images/shici.jpg" width="230" height="260">
+		<h3>诗词作品</h3>
+		<p>
+		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp屈原塔<br>
+　　&nbsp&nbsp&nbsp作者：苏轼<br> 楚人悲屈原，千载意未歇。<br> 精魂飘何处，父老空哽咽。<br> 至今沧江上，投饭救屈原。<br> 遗风成竞渡，哀叫楚山裂。<br> 屈原古壮士，就死意甚烈。<br> 世俗安得知，眷眷不忍决。<br> 南宾旧属楚，山上有遗塔。<br> 应是奉佛人，恐子就沦灭。<br> 此事虽无凭，此意固已切。<br> 古人谁不死，何必较考折。<br> 名声实无穷，富贵亦暂热。<br> 大夫知此理，所以持死节。
+		</p>
 	</div>
 
-<div class="list_img">
-		<img src="" width="230" height="260">
-		<h3>图片被描述信息</h3>
+	<div class="list_img">
+		<img src="images/gs.jpg" width="230" height="260">
+		<h3>古文掠影</h3>
+		<p>&nbsp&nbsp&nbsp端午遍游诸寺得禅字<br>
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp作者：苏轼<br>
+  &nbsp肩舆任所适，遇胜辄留连。<br>
+  &nbsp焚香引幽步，酌茗开静筵。<br>
+  &nbsp微雨止还作，小窗幽更妍。<br>
+  &nbsp盆山不见日，草木自苍然。<br>
+  &nbsp忽登最高塔，眼界穷大千。<br>
+  &nbsp卞峰照城郭，震泽浮云天。<br>
+  &nbsp深沉既可喜，旷荡亦所便。<br>
+  &nbsp幽寻未云毕，墟落生晚烟。<br>
+  &nbsp归来记所历，耿耿清不眠。<br>
+  &nbsp道人亦未寝，孤灯同夜禅。<br>
+		</p>
 	</div>
 
-<div class="list_img">
-		<img src="" width="230" height="260">
-		<h3>图片被描述信息</h3>
+	<div class="list_img">
+		<img src="images/zz.jpg" width="230" height="260">
+		<h3>特色饮食</h3>
+		<p>最早出现的端午时食，应属西汉的“枭羹”。《史记》“孝武本纪”注引如淳言：“汉使东郡送枭，五月五日为枭羹以赐百官。以恶鸟，故食之”。大约因为枭不易捕捉，所以吃枭羹的习俗并没有持续下来。锉是端午的主角-粽子，在稍晚的东汉就已出现。一直要到晋朝，粽子才成为端午的应节食品。</p>
 	</div>
-
-<div class="list_img">
-		<img src="" width="230" height="260">
-		<h3>图片被描述信息</h3>
 	</div>
 </div>
-<div class="footer">
-	copyright
-</div>
+
 </body>
 </html>
