--- a/demo13/demo13.html
+++ b/demo13/demo13.html
@@ -10,7 +10,7 @@
 	#nav{font-size: 16px;position: relative;;}
 	#nav ul{list-style-type: none;padding: 0px;margin: 10px 0;overflow:auto; }
 	#nav ul li{text-align: center;float: left;}
-	#nav a{display: block;text-decoration: none;width: 130px;height: 45px;text-align: center;line-height: 35px}
+	#nav a{display: block;text-decoration: none;width: 130px;height: 45px;text-align: center;line-height: 35px;}
 	#nav a:hover{width:130px;background-image: url(images/menu_bg1.png);}
 	#menu{position:absolute;z-index: -1;margin: 0px }
 	</style>
@@ -37,3 +37,4 @@
 	    </div>
 </body>
 </html>
+
